<resources>
    <string name="app_name">Hotel</string>
    <string name="save">Save</string>
    <string name="age">Age</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string-array name="Rooms">
        <item>Single</item>
        <item>Double</item>
        <item>Triple</item>
        <item>Quad</item>
        <item>Queen</item>
        <item>King</item>
        <item>Twin</item>
    </string-array>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_activity_navigation_main">NavigationActivityMain</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="_0">0$</string>
    <string name="select_the_type_of_room">Select the type of Room</string>
    <string name="price_of_room">Price of Room</string>
    <string name="room_information">Room Information :</string>
    <string name="number_of_beds">Number Of Beds</string>
    <string name="admin_page">Admin Page</string>
    <string name="_6_items">6 Items</string>
    <string name="manage_employee_byAdmin">Manage Employee</string>
    <string name="manage_services_byAdmin">Manage Services</string>
    <string name="manage_rooms">Manage Rooms</string>
    <string name="log_out">Log out</string>
    <string name="manage_Employee">Manage Employee</string>
    <string name="_2items">2 items</string>
    <string name="add_employee">Add Employee</string>
    <string name="remove_employee">Remove Employee</string>
    <string name="manage_employee">Manage Employee</string>
    <string name="_2_items">2 items</string>
    <string name="add_rooms">Add Rooms</string>
    <string name="update_rooms">Update Rooms</string>
    <string name="first_name_employee">first_name</string>
    <string name="last_name_employee">Last_name</string>
    <string name="remove_employee_byAdmin">Remove_Employee</string>
    <string name="new_employee">New Employee</string>
    <string name="user_name_forEmplyoee_byAdmin">User Name</string>
    <string name="passwordForEmployeebyAdmin">Password</string>
    <string name="add_emplyoee_btn">Add emplyoee</string>
    <string name="employee_page">Employee Page</string>
    <string name="_3_items">3 Items</string>
    <string name="manage_services">Manage Services</string>
    <string name="update_your_data">Update your data</string>
    <string name="log_out_EMP">Log Out</string>
    <string name="logout_EMP">LogOut</string>
    <string name="check_reservations">Check_Reservations</string>
    <string name="serviceid">ServiceID</string>
    <string name="reserveid">ReserveID</string>
    <string name="its_done">Its Done</string>
    <string name="room_id">Room_id</string>
    <string name="serv_desc">Serv_Desc</string>
    <string name="update_personal_data">Update personal data</string>
    <string name="user_name_Updatabyemployee">User Name</string>
    <string name="password_UpdateByEmployee">Password</string>
    <string name="first_name_UpByEmployee">First Name</string>
    <string name="last_name_UpByEmployee">Last Name</string>
    <string name="e_mail_UpByEmployee">E-mail</string>
    <string name="phone_UpByEmployee">Phone</string>
    <string name="gender_UpByEmployee">Gender</string>
    <string name="age_UpByEmployee">Age</string>
    <string name="visa_number_UpByEmployee">Visa Number</string>
    <string name="sign_up_UpByEmployee">Sign up</string>
    <string name="filter">Filter</string>
    <string name="additional_services">Additional Services</string>
    <string name="how_many_nights">How many Nights</string>
    <string name="manage_rooms_byAdmin">Manage Rooms</string>
    <string name="_2_items_adminRoomPage">2 items</string>
    <string name="add_room">Add Room</string>
    <string name="update_room">Update Room</string>
    <string name="update_RoomByAdmin">Update</string>
    <string name="reserve">Reserve</string>
    <string name="room_id_forEmployee">room_id</string>
    <string name="floor_emloyeePage">floor#</string>
    <string name="type_emloyeePage">Type</string>
    <string name="day_price_emloyeePage">day_price</string>
    <string name="room_info_emloyeePage">Room_Info</string>
    <string name="of_bed_emloyeePage">#_of_bed</string>
    <string name="service_description_forAdmin">Service_Description</string>
    <string name="service_price_forAdmin">Service_price</string>
    <string name="insert_forAdmin">Insert</string>
    <string name="serviceid_forAdmin">ServiceID</string>
    <string name="service_description_forAdmins">Service description</string>
    <string name="service_price_forAdmins">Service Price</string>
    <string name="refresh_forAdmin">Refresh</string>
    <string name="current_visa_number">Current visa Number</string>
    <string name="new_visa_number">New VISA Number</string>
    <string name="visa_number_up">VISA Number</string>
    <string name="submit">submit</string>
    <string name="back_toEmployeeMainpage">Back</string>
    <string name="reserve_done">Reserve_Done</string>
    <string name="reserve_id_Emp">Reserve_id</string>
    <string name="room_id_Emp">room_id</string>
    <string name="start_date_Emp">Start_date</string>
    <string name="end_date_Emp">End_date</string>
    <string name="update_room_informations">Update Room Informations</string>
    <string name="room_id_byAdmin">Room_id:</string>
    <string name="floor_number_byAdmin">Floor_number</string>
    <string name="type_byAdmin">Type:</string>
    <string name="room_price_byAdmin">Room Price</string>
    <string name="number_of_beds_byAdmin">Number of beds :</string>
    <string name="room_information_byAdmin">Room information</string>
    <string name="update_room_byAdmin">Update Room</string>
    <string name="new_password_byUser">New Password</string>
    <string name="retype_passwordByUser">Retype</string>
    <string name="submit_NewPassword">Submit</string>
    <string name="personal_user">Personal</string>
    <string name="security_user">Security</string>
    <string name="payment_user">Payment</string>
    <string name="email_updatebyUser">Email</string>
    <string name="firstname_updatebyUser">FirstName</string>
    <string name="lastname_updatebyUser">LastName</string>
</resources>