<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    tools:context=".controller.AdminController.RoomsListViewForEmployee">


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#c0c0c0"
            android:padding="10dp"
            >

            <TextView
                android:layout_column="0"
                android:layout_span="1"
                android:text="@string/room_id_forEmployee"


                />

            <TextView
                android:layout_column="1"
                android:layout_span="1"
                android:text="@string/floor_emloyeePage"

                />

            <TextView
                android:layout_column="2"
                android:layout_span="1"
                android:text="@string/type_emloyeePage"


                />

            <TextView
                android:layout_column="3"
                android:layout_span="1"
                android:text="@string/day_price_emloyeePage"

                />

            <TextView
                android:layout_column="4"
                android:layout_span="1"
                android:text="@string/room_info_emloyeePage"

                />
            <TextView
                android:layout_column="5"
                android:layout_span="1"
                android:id="@+id/room_number_of_bed_textview_E"
                android:text="@string/of_bed_emloyeePage"

                />

        </TableRow>




    <ListView

          android:id="@+id/GetRoomsListView_E"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
      />



</TableLayout>