<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation"
    tools:context=".controller.EmployeeController.EmployeeUpdateHisInformation"
    tools:ignore="MissingDefaultResource">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/signinPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:gravity="center"
            android:text="@string/update_personal_data"
            android:textColor="@color/black"
            android:textSize="35dp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/Username_UE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signinPage"
            android:layout_margin="15dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="20dp"
            android:focusable="false"
            android:hint="@string/user_name_Updatabyemployee"
            android:inputType="text"
            android:padding="20dp"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/Password_UE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Username_UE"
            android:layout_margin="15dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_info_24"
            android:drawablePadding="20dp"
            android:hint="@string/password_UpdateByEmployee"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/firstName_UE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Password_UE"
            android:layout_margin="15dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="20dp"
            android:hint="@string/first_name_UpByEmployee"
            android:inputType="text"
            android:padding="20dp"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/LastName_UE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstName_UE"
            android:layout_margin="15dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="20dp"
            android:hint="@string/last_name_UpByEmployee"
            android:inputType="text"
            android:padding="20dp"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/Email_UE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LastName_UE"
            android:layout_margin="15dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="20dp"
            android:hint="@string/e_mail_UpByEmployee"
            android:inputType="text"
            android:padding="20dp"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/phone_UE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Email_UE"
            android:layout_margin="15dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_phone_24"
            android:drawablePadding="20dp"
            android:hint="@string/phone_UpByEmployee"
            android:inputType="number"
            android:padding="20dp"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/Gender_UE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_UE"
            android:layout_margin="15dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="20dp"
            android:hint="@string/gender_UpByEmployee"
            android:inputType="text"
            android:padding="20dp"
            android:textColorHint="@color/black"
            tools:ignore="DuplicateIds" />

        <EditText
            android:id="@+id/Age_UE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Gender_UE"
            android:layout_margin="15dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="20dp"
            android:hint="@string/age_UpByEmployee"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/visanumber_UE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Age_UE"
            android:layout_margin="15dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_payment_24"
            android:drawablePadding="20dp"
            android:hint="@string/visa_number_UpByEmployee"
            android:inputType="phone"
            android:padding="20dp"
            android:textColorHint="@color/black" />


        <Button
            android:id="@+id/signupbutton_UE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/visanumber_UE"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:backgroundTint="@color/material_on_primary_emphasis_medium"
            android:text="@string/sign_up_UpByEmployee"
            android:onClick="updatePersonalInformation"
            android:textColor="@color/black"></Button>
    </RelativeLayout>


</ScrollView>
