<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/adminbody"
    tools:context=".controller.EmployeeController.EmployeeFirstActivity"
    tools:ignore="MissingDefaultResource">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            >
            <TextView
                android:id="@+id/adminpagetextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/employee_page"
                android:textSize="22sp"
                android:textColor="#FFFFFF"
                />
            <TextView
                android:layout_below="@+id/adminpagetextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3_items"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:textColor="#52BAFF"
                />
            <ImageView
                android:layout_alignParentRight="true"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/admin"
                android:id="@+id/adminPic"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/NameofemployeeID_forMainPage"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/adminPic"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="13dp"
                />


        </RelativeLayout>
        <GridLayout
            android:columnCount="1"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:src="@drawable/get"
                        android:onClick="ManageServicesOnClik"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/manage_services"
                        android:textSize="18sp"
                        android:textColor="#6f6f6f"

                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"

                >
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    >
                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:src="@drawable/up"
                        android:onClick="updaterInformation"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/update_your_data"
                        android:textSize="18sp"
                        android:textColor="#6f6f6f"

                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp">
                    <ImageView
                        android:layout_width="85dp"
                        android:layout_height="85dp"
                        android:src="@drawable/logout"
                        android:onClick="logoutonClick"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/log_out_EMP"
                        android:textSize="50sp"
                        android:textColor="#6f6f6f"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </GridLayout>

    </LinearLayout>

</ScrollView>